--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
     path: "plugins/flutter_logger"
   flutter_riverpod: ^2.4.9
   freezed_annotation: ^2.4.1
+  introduction_screen: ^3.1.17
   json_annotation: ^4.8.1
   logger: ^2.5.0
   package_info_plus: ^8.0.2
