--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "applog",
         "checkmark",
         "Cylonix",
         "Derp",
@@ -10,6 +11,7 @@
         "Macmini",
         "mullvad",
         "netmap",
+        "prefs",
         "questionmark",
         "radiowaves",
         "subheadline",
