fix user switcher UI for macOS

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,37 @@
 {
     "cSpell.words": [
+        "apitype",
         "applog",
+        "appstore",
         "checkmark",
+        "clogf",
+        "cstring",
         "Cylonix",
         "Derp",
         "desktopcomputer",
+        "envknob",
         "exclamationmark",
         "Hostinfo",
+        "iface",
+        "ifaces",
+        "Keepalives",
+        "Keypair",
         "laptopcomputer",
+        "libtailscale",
         "Macmini",
         "mullvad",
         "netmap",
         "prefs",
         "questionmark",
         "radiowaves",
+        "stdlib",
         "subheadline",
+        "Syspolicy",
         "tailchat",
+        "taildrop",
         "tailnet",
+        "utun",
+        "Verbosef",
         "viewmodels"
     ]
 }
