--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -123,17 +123,30 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.8.5"
 
     // Compose dependencies.
-    def composeBom = platform('androidx.compose:compose-bom:2024.06.00')
+    def composeBom = platform('androidx.compose:compose-bom:2024.09.03')
     implementation composeBom
-    implementation 'androidx.compose.material3:material3:1.2.1'
-    implementation 'androidx.compose.material:material-icons-core:1.6.8'
-    implementation "androidx.compose.ui:ui:1.6.8"
-    implementation "androidx.compose.ui:ui-tooling:1.6.8"
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.3'
-    implementation 'androidx.activity:activity-compose:1.9.0'
-    implementation "com.google.accompanist:accompanist-permissions:0.34.0"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.34.0"
+    implementation 'androidx.compose.material3:material3:1.3.0'
+    implementation 'androidx.compose.material:material-icons-core:1.7.3'
+    implementation "androidx.compose.ui:ui:1.7.3"
+    implementation "androidx.compose.ui:ui-tooling:1.7.3"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.6'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.8.6'
+    implementation 'androidx.activity:activity-compose:1.9.2'
+    implementation "com.google.accompanist:accompanist-permissions:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
     implementation "androidx.core:core-splashscreen:1.1.0-rc01"
+    implementation "androidx.compose.animation:animation:1.7.4"
+
+   // Navigation dependencies.
+    def nav_version = "2.8.2"
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // Supporting libraries.
+    implementation("io.coil-kt:coil-compose:2.6.0")
+    implementation("com.google.zxing:core:3.5.1")
+    implementation("com.patrykandpatrick.vico:compose:1.15.0")
+    implementation("com.patrykandpatrick.vico:compose-m3:1.15.0")
 
     // Kotlin dependencies.
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3"
@@ -145,7 +158,4 @@ dependencies {
 
     // https://pub.dev/packages/flutter_local_notifications#gradle-setup
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
-
-    // Material Design Components
-    implementation 'com.google.android.material:material:1.11.0'
 }
