--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
-  #downloadsfolder: ^1.2.0
+  downloadsfolder: ^1.2.0
   event_bus: ^2.0.0
   file_picker: ^8.1.7
   fl_chart: ^0.63.0
