--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "clogf",
         "cstring",
         "Cylonix",
+        "cylonixauth",
         "Derp",
         "desktopcomputer",
         "envknob",
