--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   pull_down_button: ^0.10.2
   share_plus: ^10.1.4
   shared_preferences: ^2.2.2
+  sign_in_with_apple: ^7.0.1
   url_launcher: ^6.3.0
   uuid: ^3.0.5
 
