--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ environment:
   sdk: '>=3.0.0'
 
 dependencies:
+  charset_converter: ^2.0.1
   cupertino_icons: ^1.0.2
   downloadsfolder: ^1.2.0
   event_bus: ^2.0.0
@@ -42,6 +43,8 @@ dependencies:
   sliver_tools: ^0.2.12
   url_launcher: ^6.3.0
   uuid: ^3.0.5
+  ffi: ^2.1.4
+  win32: ^5.14.0
 
 dev_dependencies:
   build_runner: ^2.4.6
@@ -50,6 +53,7 @@ dev_dependencies:
   flutter_launcher_icons: "^0.14.2"
   flutter_lints: ^1.0.0
   freezed: ^2.5.8
+  json_serializable: ^6.7.1
 
 flutter_launcher_icons:
   android: false
