--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ environment:
 dependencies:
   charset_converter: ^2.0.1
   cupertino_icons: ^1.0.2
+  device_info_plus: ^11.5.0
   downloadsfolder: ^1.2.0
   event_bus: ^2.0.0
   file_picker: ^8.1.7
@@ -37,6 +38,7 @@ dependencies:
   path: ^1.8.3
   path_provider: ^2.0.2
   pull_down_button: ^0.10.2
+  qr_flutter: ^4.1.0
   share_plus: ^10.1.4
   shared_preferences: ^2.2.2
   sign_in_with_apple: ^7.0.1
