add fun media for android tv

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -122,3 +122,4 @@ flutter:
     - .env.local
     - lib/assets/images/cylonix_128.png
     - lib/assets/images/cylonix_512.png
+    - lib/assets/images/landing-banner.webp
