--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,11 +10,13 @@
         "cylonixauth",
         "Derp",
         "desktopcomputer",
+        "Donenfeld",
         "envknob",
         "exclamationmark",
         "Hostinfo",
         "iface",
         "ifaces",
+        "Isovalent",
         "Keepalives",
         "Keypair",
         "laptopcomputer",
