--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     path: "plugins/flutter_logger"
   flutter_riverpod: ^2.4.9
   freezed_annotation: ^2.4.1
+  installed_apps: ^1.6.0
   introduction_screen: ^3.1.17
   json_annotation: ^4.8.1
   logger: ^2.5.0
