fix ui issues and support wg-only exit-node selection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "Donenfeld",
         "envknob",
         "exclamationmark",
+        "EZBLOCK",
         "Hostinfo",
         "iface",
         "ifaces",
@@ -35,7 +36,8 @@
         "tailnet",
         "utun",
         "Verbosef",
-        "viewmodels"
+        "viewmodels",
+        "warnable"
     ],
     "makefile.configureOnOpen": false,
     "files.associations": {
