android auto start after reboot support and android tv ui improvements

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "prefs",
         "questionmark",
         "radiowaves",
+        "Reauthenticating",
         "stdlib",
         "subheadline",
         "Syspolicy",
