--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Cross platform client app for cylonix services
 # Make sure the version code (the number behind the '+') is higher than the
 # previous version. Android requires the version code to be always higher
 # when updating the app.
-version: 1.0.9+76
+version: 1.0.10+77
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -44,10 +44,15 @@ dependencies:
   shared_preferences: ^2.2.2
   sign_in_with_apple: ^7.0.1
   sliver_tools: ^0.2.12
+  system_tray:
+    git:
+      url: https://github.com/cylonix/system_tray.git
+      ref: cylonix2
   url_launcher: ^6.3.0
   uuid: ^3.0.5
   ffi: ^2.1.4
   win32: ^5.14.0
+  window_manager: ^0.3.7
 
 dev_dependencies:
   build_runner: ^2.4.6
@@ -124,3 +129,6 @@ flutter:
     - lib/assets/images/cylonix_128.png
     - lib/assets/images/cylonix_512.png
     - lib/assets/images/landing-banner.webp
+    - lib/assets/images/cylonix.ico
+    - lib/assets/images/cylonix_connected.ico
+    - lib/assets/images/cylonix_disconnected.ico
