--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,7 @@
-org.gradle.jvmargs=-Xmx1536M
+org.gradle.jvmargs=-Xmx4g -XX:+UseSerialGC -XX:MaxMetaspaceSize=512m
 android.useAndroidX=true
 android.enableJetifier=true
 android.jetifier.ignorelist=bcprov-jdk15on
+
+# Limit parallel workers to reduce memory consumption
+org.gradle.workers.max=4
